Add update and delete for thread
