# src/chat/dtos/thread-update.input.dto.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsNotEmpty, IsString } from 'class-validator';
+
+export class ThreadUpdateInputDto {
+  @ApiProperty()
+  @IsString()
+  @IsNotEmpty()
+  title: string;
+}
